@@ -6,6 +6,7 @@ History for IMDBPHP2
 v2.1.8
 -------------------
 * improvements to the imdb::soundtrack() method. Much better results now :)
++ imdb_person::filmograf() now fills the "addons" information again (for all movie_*() methods)
 
 v2.1.7 (15.05.2013)
 -------------------
